src/exercises/snapshots/aoc_2022__exercises__day5__tests__day_5_1.snap
---
source: src/exercises/day5.rs
assertion_line: 155
expression: result
---
[
    'C',
    'M',
    'Z',
]
