src/exercises/snapshots/aoc_2022__exercises__day5__tests__day_5_2.snap
---
source: src/exercises/day5.rs
assertion_line: 201
expression: result
---
[
    'M',
    'C',
    'D',
]
