src/exercises/snapshots/aoc_2022__exercises__day5__tests__instruction_execute.snap
---
source: src/exercises/day5.rs
assertion_line: 141
expression: stacks
---
[
    [],
    [
        'a',
    ],
]
