src/exercises/snapshots/aoc_2022__exercises__day5__tests__instruction_parsing.snap
---
source: src/exercises/day5.rs
assertion_line: 132
expression: instruction
---
Instruction {
    number: 1,
    from: 0,
    to: 1,
}
