src/exercises/snapshots/aoc_2022__exercises__day5__tests__parse_stacks.snap
---
source: src/exercises/day5.rs
assertion_line: 58
expression: parsed
---
(
    [
        [
            'Z',
            'N',
        ],
        [
            'M',
            'C',
            'D',
        ],
        [
            'P',
        ],
    ],
    [
        "move 1 from 2 to 1",
        "move 3 from 1 to 3",
        "move 2 from 2 to 1",
        "move 1 from 1 to 2",
    ],
)
